# tile-clicker

./: .gitignore  Cargo.toml  Readme.md  index.html
src/: game.rs  main.rs  main_menu.rs  ui.rs
src/game/: input.rs  loading.rs
