[package]
name = "tile-clicker"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Vandenbergh <thomas@hgrebnednav.be>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
[dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
	"bevy_asset",
	"bevy_audio",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"multi-threaded",
	"x11",
	"tonemapping_luts",
	"default_font",
	"wav",
	"webgl2",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
default-features = false
features = ["Window"]

[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
